Fix dimensions of the hidden color input in the Layout panel
The 'Show a quick highlight on the focused object' feature
available in chrome://settings/accessibility draws a highlight
around focused objects. The color input in the Layout panel
is not visible and didn't have proper dimensions although the
a11y still used its dimensions to draw the highlight. This CL
fixes the dimension and the position of the hidden color input.

Bug: chromium:1171261

--- a/front_end/elements/layoutPane.css
+++ b/front_end/elements/layoutPane.css
@@ -145,6 +145,14 @@
   height: 10px;
   margin: 0 0 0 8px;
   width: 10px;
+  position: relative;
+}
+
+/* We set dimensions for the invisible input to support quick highlight a11y feature that uses the dimensiosn to draw an outline */
+.color-picker-label input[type=color] {
+  width: 100%;
+  height: 100%;
+  position: absolute;
 }
 
 .color-picker-label:hover,
